[THES-74] Limit JVM memory consumption in docker containers (preventing OoM)